--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Brew</string>
     <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
 
     <string name="admob_ad_unit_id">ca-app-pub-1272425295572154/7850020824</string>
     <string name="admob_app_id">ca-app-pub-1272425295572154~4896554429</string>
